--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run",
-    "open": "cypress open"
+    "open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "keywords": [
     "cypress",
