configuring gitHub actions to run tests and adjust the readme

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Desafio Tecnico Winnin",
   "main": "index.js",
   "scripts": {
-    "test": "cypress run",
-    "open": "cypress open",
-    "cypress:run": "cypress run"
+  "test": "npx cypress run",
+  "open": "npx cypress open"
   },
   "keywords": [
     "cypress",
