--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -1,36 +1,26 @@
-name: Run Cypress Tests
+name: Cypress Tests
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
-    inputs:
-      environment:
-        description: 'Escolha o ambiente para execução dos testes'
-        required: true
-        default: 'staging'
-        type: choice
-        options:
-          - staging
-          - production
 
 jobs:
   cypress-tests:
     runs-on: ubuntu-latest
 
     steps:
-      # Passo 1: Checkout do repositório
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      # Passo 2: Configurar Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
 
-      # Passo 3: Instalar dependências do projeto
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      # Passo 4: Rodar os testes Cypress (API e Wikipedia)
-      - name: Run Cypress tests
-        run: npm run test
+    - name: Run Cypress tests
+      run: npx cypress run
