Fix permission issue for Cypress execution2

--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -19,10 +19,19 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Cache Cypress binary
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/Cypress
+          key: ${{ runner.os }}-cypress-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-cypress-
+
       - name: Install dependencies
-        run: |
-          npm install
-          sudo chmod +x ./node_modules/.bin/cypress # Permissão de execução para o Cypress
+        run: npm install
+
+      - name: Install Cypress binary
+        run: npx cypress install
 
       - name: Run Cypress tests
         run: npx cypress run
